--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <selenium.gridurl></selenium.gridurl>
+    <selenium.gridurl>localhost:4444/wd/hub</selenium.gridurl>
   </properties>
 
   <dependencies>
@@ -46,6 +46,9 @@
         <configuration>
           <source>22</source>
           <target>22</target>
+          <systemPropertyVariables>
+            <selenium.gridurl>${selenium.gridurl}</selenium.gridurl>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
         <plugin>
@@ -53,6 +56,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M7</version>
           <configuration>
+
             <suiteXmlFiles>
               <suiteXmlFile>src/test/java/suites/homepagetests.xml</suiteXmlFile> <!-- Path to your TestNG suite file -->
             </suiteXmlFiles>
