--- a/src/01-replicas-grid/docker-compose.yaml
+++ b/src/01-replicas-grid/docker-compose.yaml
@@ -8,8 +8,11 @@ services:
       #- "4443:4443"
   chrome:
     image: selenium/node-chrome:latest
+    shm_size: '2g'
     depends_on:
       - hub
+    deploy:
+      replicas: 4
     environment:
       - SE_EVENT_BUS_HOST=hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
